BajiDeveloperEdition/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Company_CEO__c</fullName>
        <formula>Company__r.CEO__c</formula>
        <label>Company CEO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>ID-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>empno__c</fullName>
        <label>empno</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>skills__c</fullName>
        <label>skills</label>
        <type>TextArea</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Mobile_Number</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE( Mobile__c ) !=  Mobile__c</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Check Previous mobile Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mobile_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( LEN( Mobile__c) &gt; 10 ||  LEN( Mobile__c) &lt; 10)</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Check Mobile Number</errorMessage>
    </validationRules>
</CustomObject>